<resources>
    <string name="app_name">Kalkulator</string>
    <string name="_0">0</string>
    <string name="kalkulator_bagus">Kalkulator Bagus</string>
    <string name="tambah">Tambah</string>
    <string name="kurang">Kurang</string>
    <string name="kali">Kali</string>
    <string name="bagi">Bagi</string>
    <string name="hitung">HITUNG</string>
    <string name="hasil">Hasil :</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="display">Display</string>
    <string name="display_hitungan">Display Hitungan</string>
    <string name="textview">TextView</string>
    <string name="kalkulator_apis">Kalkulator Apis</string>
</resources>